media/error_tc/error_265.txt
G:\SEM-7\ADF\FINAL PROJECT\AlgoBooth\media\source_codes/code_wqjo4F3.cpp: In function 'int main()':
G:\SEM-7\ADF\FINAL PROJECT\AlgoBooth\media\source_codes/code_wqjo4F3.cpp:8:1: error: expected ';' before '}' token
 }
 ^
